--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -4,7 +4,7 @@ descriptionFirst:  Digytle's unique talent scouting methodology and talent nurse
 headerSecond: Testing Automation with AUXTA
 descriptionSecond: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
 
-headerThird: Conversational, Compliant, No Code Bots 
+headerThird: Conversational and Compliant Chatbots 
 descriptionThird: Our sister company Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
 
 headerForth: Pioneering Thinking and Digital Leadership
