--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,5 +1,5 @@
 headerFirst: Talent Scouting and Nurseries
-descriptionFirst:  Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most talented minds of their generation, from across Europe.
+descriptionFirst:  Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
 
 headerSecond: Testing Automation with AUXTA
 descriptionSecond: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
