--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -2,7 +2,7 @@ headerFirst: Talent Scouting and Nurseries
 descriptionFirst:  Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible talent. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
 
 headerSecond: Testing Automation with AUXTA
-descriptionSecond: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform 10s of 1000s of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
+descriptionSecond: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform tens of thousands of steps every hour, of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
 
 headerThird: Conversational and Compliant Chatbots 
 descriptionThird: Our sister company Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code, drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
