--- a/content/featurettes/accessapp.yaml
+++ b/content/featurettes/accessapp.yaml
@@ -1,4 +1,4 @@
-title: How we managed to build an app in the middle of the pandemic and how will it evolve after it 
+title: How do you safely restart society and the economy after the pandemic? Introducing AccessApp the free, open source booking system we built in response to COVID-19.
 summary: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
 image: ../assets/Digytle.stories.png
 
