--- a/content/featurettes/accessapp.yaml
+++ b/content/featurettes/accessapp.yaml
@@ -1,6 +1,5 @@
-title: How we managed to build an app in the middle of the pandemic and how will it evolve after it 
-summary: Introducing AccessApp the free, open source booking and discovery platform we built in response to COVID-19.
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+title: How we managed to build an app in the middle of the pandemic and how it will evolve after
+summary: Introducing AccessApp the free, open source booking and discovery platform we built in response to COVID-19 with public safety as its primary concern
 
 
 image: ../assets/Digytle.stories.png
