--- a/content/work.yaml
+++ b/content/work.yaml
@@ -16,7 +16,7 @@ work:
   template: featurettes
   link: blits
 - title: greenaltas.earth
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
+  description: A complex marketplace for informing, educating, preparing and matching players in the green energy marketplace, as well as providing them with rich data and tools for and beyond the matchmaking.
   image: assets/sbf.png
   template: featurettes
   link: sbf
