--- a/content/work.yaml
+++ b/content/work.yaml
@@ -1,14 +1,17 @@
+title: Latest Work
 # TODO
-# The count does not work.
-# Do the left and right w/ the mechanics of the site.
-title: Latest Workл
+# rename to big:
 bigWork:
 - title: 
   description: Blits.ai is a chatbot management system.
   image: assets/blits.bot.png
+  # TODO
+  # remove
   imagePad: assets/blits.bot.half.png
   template: featurettes
   link: blits
+# TODO
+# rename to left: and see why does it repeat
 work:
 - title: Blits.ai
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
@@ -20,6 +23,8 @@ work:
   image: assets/sbf.png
   template: featurettes
   link: sbf
+# TODO
+# rename to right: 
 workright:
 - title: Stichting Bedrijfsfinanciering
   description: A complex marketplace for informing, educating SMES, and helping them prepare and choose a financing product.
