--- a/content/work.yaml
+++ b/content/work.yaml
@@ -1,18 +1,17 @@
 title: Latest Work
 # TODO
 # rename to big:
-bigWork:
+big:
 - title: 
   description: Blits.ai is a chatbot management system.
   image: assets/blits.bot.png
   # TODO
   # remove
-  imagePad: assets/blits.bot.half.png
   template: featurettes
   link: blits
 # TODO
 # rename to left: and see why does it repeat
-work:
+left:
 - title: Blits.ai
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
   image: assets/blits.png
@@ -25,7 +24,7 @@ work:
   link: sbf
 # TODO
 # rename to right: 
-workright:
+right:
 - title: Stichting Bedrijfsfinanciering
   description: A complex marketplace for informing, educating SMES, and helping them prepare and choose a financing product.
   image: assets/blits.png
