--- a/content/YearSummarised.yaml
+++ b/content/YearSummarised.yaml
@@ -1,5 +1,5 @@
 title: 2020   Summarised
 description: How we successfully pivoted during the pandemic 
 image: assets/yearSummarised.png 
-link: leadership
-template: person
+link: summarised
+template: featurettes
