--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -7,7 +7,7 @@ features:
   link: leadership
   template: featurettes
 - name: Conversational Bots
-  description: Blits.ai is ...
+  description: Blits.ai is a conversational bot.
   image: assets/Caterina_AboutPage.png
   link: conversational-chatbots
   template: featurettes
