--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -3,21 +3,21 @@ header-description: Here are a person, a book and a teaching course.
 features:
 - name: Distributed Leadership and Digital Innovation
   description: 'A book before its time: Distributed Leadership and Digital Innovation is even more current now, when we are locked away and cannot meet, but has power to carry you beyond.'
-  image: assets/41v5mLXBRaL.png
+  image: assets/leadership.png
   link: leadership
   template: featurettes
 - name: Conversational Bots
   description: Blits.ai is a conversational bot.
-  image: assets/Caterina_AboutPage.png
+  image: assets/Blits.featurete.png
   link: conversational-chatbots
   template: featurettes
 - name: Coding for Executives
   description: 'Software developers are required to think business, but can Executives think code? In between one and three fun sessions, Scratch for Executives will help you open your mind and reach the Holy Graal of collaboration: empathy.'
-  image: assets/maxresdefault.png
+  image: assets/coding.png
   link: scratch-for-executives
   template: featurettes
 - name: Automated Deep Quality And Compliance Monitoring
   description: We offer peace of mind.
-  image: assets/Caterina_AboutPage.png
+  image: assets/Auxta.featurete.png
   link: learn-more
   template: featurettes
