--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,8 +1,8 @@
 headerFirst: Talent Scouting and Nurseries
 descriptionFirst:  Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible individuals. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
 
-headerSecond: Testing Automation with AUXTA
-descriptionSecond: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform tens of thousands of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
+headerSecond: Quality
+descriptionSecond: Digytle specialices in the full lifecycle of quality. We have delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and compliance monitoring (for such as European Securities and Markets Authority driven) to customers such as the Thomas Lloyd investment fund. AUXTA, one of the Digytle services, assists Digytle in this effort, allowing Automated Deep Quality And Compliance Monitoring of online and mobile application, including functiona, penetratrion and more.
 
 headerThird: Conversational and Compliant Chatbots 
 descriptionThird: Our sister company Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code, drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
