--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -25,9 +25,9 @@
 image: ../assets/caterina.png
 color: "#ffffff"
 title: Distributed Leadership and Digital Innovation
-description: There are books one should read after one has lived a bit. Or shall I say—suffered. My restlessness has been stretching my personal and business relationships for four decades, so "distributed" drew my attention immediately. Followed by the plurality, even though I would not limit leadership to two, but two is a good starting point for the weak at heart. And eventually—by the "there are no heroes" approach, which one comes across time and again in the book. An approach I have been embracing since I read Elliott Jaques' Executive Leadership, and have been practicing during the last years as part of the highly egalitarian and entrepreneurial Dutch culture, in which I could participate. /// Great book for those hungry for concise and academically well founded literature—to confirm, encourage, challenge and shape their worldview and thought process.
+description: There are books one should read after one has lived a bit. Or shall I say—suffered.
 subTitle: Caterina Maniscalco
-subDescription: Caterina is...
+subDescription: My restlessness has been stretching my personal and business relationships for four decades, so "distributed" drew my attention immediately. Followed by the plurality, even though I would not limit leadership to two, but two is a good starting point for the weak at heart. And eventually—by the "there are no heroes" approach, which one comes across time and again in the book. An approach I have been embracing since I read Elliott Jaques' Executive Leadership, and have been practicing during the last years as part of the highly egalitarian and entrepreneurial Dutch culture, in which I could participate. /// Great book for those hungry for concise and academically well founded literature—to confirm, encourage, challenge and shape their worldview and thought process.
 quote:
 - bigQuotes: ../assets/big_quotes.svg
   text: "Empower your senior team members: you can’t do it all, and you owe it to yourself as well as the team members that work for you to give them a chance to spread their wings and take on additional responsibility that — should their own careers progress — they will need to take on eventually themselves."
