--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -53,9 +53,10 @@ sections:
 action:
 - question: Are you interested in working with us?
   description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-  
+  cta: Buy now
+
   button: 
-  url: www.amazon.co.uk/Distributed-Leadership-Digital-Innovation-Management-ebook/dp/B081VTVJVX
+  url: https://www.amazon.com/Distributed-Leadership-Digital-Innovation-Management/dp/0367361485/ref=sr_1_31?keywords=innovation&qid=1573320208&refinements=p_n_publication_date%3A1250228011&s=books&sr=1-31
   image: ../assets/amazon.png
 
   button2: 
@@ -64,5 +65,5 @@ action:
 
   button3: 
   url3: 
-  image3: 
+  image3: ../assets/Waterstones.png
 background: /assets/background_with_us.png
