--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -3,7 +3,7 @@
 #   title:
 #     title:
 #     colour:
-#   description:
+#     description:
 # sections:
 #   - section:
 #     title:
@@ -14,55 +14,62 @@
 #       title:
 #       description:
 #     text:
-#       - (paragraph)
-#       - (paragraph)
+#       (paragraph)
+#       (paragraph)
 #     quote:
-#       - (paragraph)
-#       - (paragraph)
+#       (paragraph)
+#       (paragraph)
 # THIS SECTION CAN BE REPEATED MANY TIMES
 # IF WE WANT 3 IMAGES AFTER ANOTHER WE REPEAT THREE SECTIONS THAT CONTAIN ONLY IMAGES
 
-image: ../assets/caterina.png
-color: "#ffffff"
-title: Distributed Leadership and Digital Innovation
-description: There are books one should read after one has lived a bit. Or shall I say—suffered.
-subTitle: Caterina Maniscalco
-subDescription: My restlessness has been stretching my personal and business relationships for four decades, so "distributed" drew my attention immediately. Followed by the plurality, even though I would not limit leadership to two, but two is a good starting point for the weak at heart. And eventually—by the "there are no heroes" approach, which one comes across time and again in the book. An approach I have been embracing since I read Elliott Jaques' Executive Leadership, and have been practicing during the last years as part of the highly egalitarian and entrepreneurial Dutch culture, in which I could participate. /// Great book for those hungry for concise and academically well founded literature—to confirm, encourage, challenge and shape their worldview and thought process.
-quote:
-- bigQuotes: ../assets/big_quotes.svg
-  text: "Empower your senior team members: you can’t do it all, and you owe it to yourself as well as the team members that work for you to give them a chance to spread their wings and take on additional responsibility that — should their own careers progress — they will need to take on eventually themselves."
-  smallQuotes: ../assets/small_quotes.svg
+header:
+  image: ../assets/caterina.png
+  title:
+    title: Distributed Leadership and Digital Innovation
+    colour: "#EF233C"
+    description: There are books one should read after one has lived a bit. Or shall I say—suffered.
 sections:
-- description: 
-  - Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-  - At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-  - Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-  - At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-
-  image: ../assets/book-img.png
-  imageTitle: This is a photo of our project
-  imageDescription:  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-  
-  image2: ../assets/dolce.png
-  imageTitle2: This is a second wide photo of our project
-  imageDescription2:  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-
-  image3: ../assets/dolce.png
-  imageTitle3: This is a third wide photo of our project
-  imageDescription3:  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+  - section:
+    title:
+      title: Caterina Maniscalco
+      colour: "#EF233C"
+    image:
+      url: ../assets/book-img.png
+      title: This is a photo of our project
+      description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+      colour: "#EF233C"
+    text:
+      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+      At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+    quote:
+      colour: "#6E44FF"
+      bigQuotes: ../assets/big_quotes.svg
+      text: "Empower your senior team members: you can’t do it all, and you owe it to yourself as well as the team members that work for you to give them a chance to spread their wings and take on additional responsibility that — should their own careers progress — they will need to take on eventually themselves."
+      smallQuotes: ../assets/small_quotes.svg
 action:
-- question: Are you interested in working with us?
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+  text:
+    question: Are you interested in working with us?
+    description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
+    background: 
+buttons:
+  - button:
+    link:
+      https://www.amazon.com/Distributed-Leadership-Digital-Innovation-Management/dp/0367361485/ref=sr_1_31?keywords=innovation&qid=1573320208&refinements=p_n_publication_date%3A1250228011&s=books&sr=1-31
+    image: 
+      ../assets/amazon.png
+  - button:
+    link:
+      https://www.routledge.com/Distributed-Leadership-and-Digital-Innovation-The-Argument-For-Couple-Leadership/Maniscalco/p/book/9780367361488
+    image: 
+      ../assets/Routledge.png
+  - button:
+    link:
+      https://www.waterstones.com/book/distributed-leadership-and-digital-innovation/caterina-maniscalco//9780367361488
+    image: 
+      ../assets/Waterstones.png
 
-  button: 
-  url: https://www.amazon.com/Distributed-Leadership-Digital-Innovation-Management/dp/0367361485/ref=sr_1_31?keywords=innovation&qid=1573320208&refinements=p_n_publication_date%3A1250228011&s=books&sr=1-31
-  image: ../assets/amazon.png
 
-  button2: 
-  url2: www.routledge.com/Distributed-Leadership-and-Digital-Innovation-The-Argument-For-Couple-Leadership/Maniscalco/p/book/9780367361488
-  image2: ../assets/Routledge.png
 
-  button3: 
-  url3: 
-  image3: ../assets/Waterstones.png
-background: /assets/background_with_us.png
+
+
+
