--- a/content/work.yaml
+++ b/content/work.yaml
@@ -12,8 +12,8 @@ big:
 # TODO
 # rename to left: and see why does it repeat
 left:
-- title: Blits.ai
-  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam era
+- title: Blits
+  description: Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code, drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
   image: assets/blits.png
   template: featurettes
   link: blits
