--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -3,8 +3,9 @@ descriptionFirst:  Digytle's unique talent scouting methodology and talent nurse
 
 headerSecond: Assured Quality and Uncompromised Testing
 descriptionSecond: Digytle specialices in the full lifecycle of quality. We have delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and compliance monitoring (for such as European Securities and Markets Authority driven) to customers such as the Thomas Lloyd investment fund. AUXTA, one of the Digytle services, allows Automated Deep Quality And Compliance Monitoring of online and mobile applications, including functions, penetration and more.
-headerThird: Conversational and Compliant Chatbots 
-descriptionThird: Our sister company Blits can power all your company’s internal and external chatbots and voicebots. Offering a no code, drag and drop interface to make creating, comparing and deploying bots across your whole company fast and easy. Compatible with any AI engine, comms channel and connectors to build smart bots that will save your organisation time and resources.
+
+headerThird: Progressive Products and Tailored Solutions
+descriptionThird: From complex banking platforms through to no code chatbot deployment compatible with any AI engine Digytle will help you navigate, develop and adopt the best digital products and practices bring new products to market and grow and improve your existing ones.
 
 headerForth: Pioneering Thinking and Digital Leadership
 descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design.   
