--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,11 +1,11 @@
 headerFirst: Talent Scouting and Nurseries
 descriptionFirst:  Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible individuals. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
 
-headerSecond: Assured Quality and Uncompromised Testing
-descriptionSecond: Digytle specialices in the full lifecycle of quality. We have delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and compliance monitoring (for such as European Securities and Markets Authority driven) to customers such as the Thomas Lloyd investment fund. AUXTA, one of the Digytle services, allows Automated Deep Quality And Compliance Monitoring of online and mobile applications, including functions, penetration and more.
+headerSecond: Progressive Products and Tailored Solutions
+descriptionSecond: From complex banking platforms through to no code chatbot deployment compatible with any AI engine Digytle will help you navigate, develop and adopt the best digital products and practices bring new products to market and grow and improve your existing ones.
 
-headerThird: Progressive Products and Tailored Solutions
-descriptionThird: From complex banking platforms through to no code chatbot deployment compatible with any AI engine Digytle will help you navigate, develop and adopt the best digital products and practices bring new products to market and grow and improve your existing ones.
+headerThird: Pioneering Thinking and Digital Leadership
+descriptionThird: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design. 
 
-headerForth: Pioneering Thinking and Digital Leadership
-descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design.   
+headerForth: Assured Quality and Uncompromised Testing
+descriptionForth: Digytle specialises in the full lifecycle of quality. We have delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and compliance monitoring (for such as European Securities and Markets Authority driven) to customers such as the Thomas Lloyd investment fund. AUXTA, one of the Digytle services, allows Automated Deep Quality And Compliance Monitoring of online and mobile applications, including functions, penetration and more.
