--- a/content/work.yaml
+++ b/content/work.yaml
@@ -2,8 +2,8 @@ title: Latest Work
 # TODO
 # rename to big:
 big:
-- title: 
-  description: Blits.ai is a chatbot management system.
+- title: AUXTA
+  description: AUXTA performs Deep Automated Quality Assurance of your online or mobile application. It can perform tens of thousands of steps every hour, imitating human visitor, and comparing the result fixed or dynamic values. AUXTA also performs compliance supervision such as European Securities and Markets Authority (ESMA) monitoring.
   image: assets/blits.bot.png
   # TODO
   # remove
