--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -8,4 +8,4 @@ headerThird: Pioneering Thinking and Digital Leadership
 descriptionThird: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design. 
 
 headerForth: Assured Quality and Uncompromised Testing
-descriptionForth: Digytle specialises in the full lifecycle of quality. We have delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and automated compliance monitoring (for such as European Securities and Markets Authority driven) to customers such as the Thomas Lloyd investment fund. 
+descriptionForth: Digytle specialises in the full lifecycle of quality. We have delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and automated compliance monitoring (European Securities and Markets Authority compliance) to customers such as the Thomas Lloyd investment fund. 
