--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,8 +1,8 @@
-headerFirst: Talent Scouting and Nurseries
-descriptionFirst:  Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible individuals. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
+headerFirst: Progressive Products and Tailored Solutions
+descriptionFirst:  From complex banking platforms through to no code chatbot deployment compatible with any AI engine Digytle will help you navigate, develop and adopt the best digital products and practices, bring new products to market, and grow and improve your existing ones.
 
-headerSecond: Progressive Products and Tailored Solutions
-descriptionSecond: From complex banking platforms through to no code chatbot deployment compatible with any AI engine Digytle will help you navigate, develop and adopt the best digital products and practices, bring new products to market, and grow and improve your existing ones.
+headerSecond: Talent Scouting and Nurseries 
+descriptionSecond: Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible individuals. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
 
 headerThird: Pioneering Thinking and Digital Leadership
 descriptionThird: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design. 
