--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,5 +1,5 @@
 headerFirst: Progressive Products and Tailored Solutions
-descriptionFirst:  From complex banking platforms through to 'no code' chatbot deployment compatible with any AI engine, Digytle will help you navigate, develop and adopt the best digital products and practices, bring new products to market, and grow and improve your existing ones.
+descriptionFirst:  From complex banking platforms through to 'no code' chatbot deployment thats compatible with any AI engine, Digytle will help you navigate, develop and adopt the best digital products and practices, bring new products to market, and grow and improve your existing ones.
 
 headerSecond: Talent Scouting and Nurseries 
 descriptionSecond: Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible individuals. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
