--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -4,8 +4,8 @@ descriptionFirst:  From complex banking platforms through to 'no code' chatbot d
 headerSecond: Talent Scouting and Nurseries 
 descriptionSecond: Digytle's unique talent scouting methodology and talent nurseries allows us to hire incredible individuals. Partnering with top academic institutions we educate and mentor their students to identify, develop and eventually employ some of the most brilliant minds of their generation, from all across Europe.
 
-headerThird: Pioneering Thinking and Digital Leadership
-descriptionThird: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design. 
+headerThird: Assured Quality and Uncompromised Testing
+descriptionThird: We specialise in the full lifecycle of quality. Digytle has delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and automated European Securities and Markets Authority compliance monitoring for investment house Thomas Lloyd. 
 
-headerForth: Assured Quality and Uncompromised Testing
-descriptionForth: Digytle specialises in the full lifecycle of quality. We have delivered Software Product Quality Assurance Control Frameworks for companies such as KPMG and automated European Securities and Markets Authority compliance monitoring for investment house Thomas Lloyd. 
+headerForth: Pioneering Thinking and Digital Leadership
+descriptionForth: Our passion for teaching does not end with our talent and we seek to help and educate the wider business community through online learning and creating a comprehensive information resource for digital transformation, products and design. 
