inner page changes

--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -1,5 +1,5 @@
 header:
-  image: ../assets/caterina.png
+  image: ../assets/Caterina_AboutPage.png
   title:
     title: Distributed Leadership and Digital Innovation
     colour: "#EF233C"
