--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -3,12 +3,12 @@ header-description: Here are a person, a book and a teaching course.
 features:
 - name: Distributed Leadership and Digital Innovation
   description: 'A book before its time: Distributed Leadership and Digital Innovation is even more current now, when we are locked away and cannot meet, but has power to carry you beyond.'
-  image: assets/book.featurettes.png
+  image: assets/book.featurette.png
   link: leadership
   template: featurettes
 - name: Conversational Bots
   description: Blits.ai is a conversational bot.
-  image: assets/Blits.featurete.png
+  image: assets/bot.featurette.png
   link: conversational-chatbots
   template: featurettes
 - name: Coding for Executives
@@ -18,6 +18,6 @@ features:
   template: featurettes
 - name: Automated Deep Quality And Compliance Monitoring
   description: We offer peace of mind.
-  image: assets/Auxta.featurete.png
+  image: assets/ta.featurette.png
   link: learn-more
   template: featurettes
