--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -7,7 +7,7 @@ header:
 sections:
   - section:
     title:
-      title: Distributed Leadership
+      title: Aux, Ahead of Our Time
       colour: "#EF233C"
     text:
       - T. E. Shaw co-founded AuxCode in 2013, while based in Germany. One of the co-founders was in Canada and one in Bulgaria.
