--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -27,7 +27,8 @@ sections:
       description: Written like a PhD, the book has the rare power to instruct and convince.
       colour: "#EF233C"
   - section:
-    title: Caterina Maniscalco
+    title:
+      title: Caterina Maniscalco
   - section:
     text:
       - Caterina was born in New York and spent the last 20 years consulting digitle strategy.
