--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -29,10 +29,11 @@ sections:
   - section:
     title:
       title: Caterina Maniscalco
+      colour: "#EF233C"
   - section:
     text:
       - Caterina was born in New York and spent the last 20 years consulting digitle strategy.
-      — Caterina is one of the Digytle partners, an elite guild.
+      - Caterina is one of the Digytle partners, an elite guild.
       - Caterina is available as a consultant, lecturer and speaker.
     quote:
       colour: "#6E44FF"
