--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -10,9 +10,10 @@ sections:
       title: Aux, Ahead of Our Time
       colour: "#EF233C"
     text:
-      - T. E. Shaw co-founded AuxCode in 2013, while based in Germany. One of the co-founders was in Canada and one in Bulgaria.
-      - AuxCode has not had defined C-level roles for the first seven years. The three co-founders took the decisions in a unnanimous, distributed manner.
-      - When T. E. saw the book, he shouted "We have been doing this for years!" And the connection with Caterina Maniscalco worked from the first moment.
+      - When T.E. Shaw co-founded Aux in 2013, he based in Germany with one of the co-founders in Canada and the other in Bulgaria.
+      - In addition to that Aux has never had defined C-level roles. The three co-founders take decisions unnanimously and share the workload as needed.
+      - When Charie Cox and T.E. Shaw co-founded Digytle in 2020 they followed the same route.
+      - For this reason when T.E. Shaw saw Distributed Leadership and Digital Innovation, he "Bang! That's what we have been doing for years!". And he made it his mission to meet Caterina Maniscalco, whic he eventually did in the early 2020.
   - section:
     title:
       title: Solid Science
