--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -10,9 +10,9 @@ sections:
       title: Aux, Ahead of Our Time
       colour: "#EF233C"
     text:
-      - When T.E. Shaw co-founded Aux in 2013, he based in Germany with one of the co-founders in Canada and the other in Bulgaria.
+      - When T.E. Shaw co-founded Aux in 2013, he was based in Germany with one of the co-founders in Canada and the other in Bulgaria.
       - In addition to that Aux has never had defined C-level roles. The three co-founders take decisions unnanimously and share the workload as needed.
-      - When Charie Cox and T.E. Shaw co-founded Digytle in 2020 they followed the same route.
+      - When Charie Cox and Aux co-founded Digytle in London in 2020 they followed the same distributed route, building on Aux' successful and harmoneous model, adding a lovely British flavour.
       - For this reason when T.E. Shaw saw Distributed Leadership and Digital Innovation, he "Bang! That's what we have been doing for years!". And he made it his mission to meet Caterina Maniscalco, whic he eventually did in the early 2020.
   - section:
     title:
