--- a/content/featurettes/leadership.yaml
+++ b/content/featurettes/leadership.yaml
@@ -7,7 +7,7 @@ header:
 sections:
   - section:
     title:
-      title: Aux, Ahead of Our Time
+      title: Aux and Digytle, Ahead of Our Time
       colour: "#EF233C"
     text:
       - When T.E. Shaw co-founded Aux in 2013, he was based in Germany with one of the co-founders in Canada and the other in Bulgaria.
