--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -1,9 +1,9 @@
 header:
   image: ../assets/Caterina_AboutPage.png
   title:
-    title: Distributed Leadership and Digital Innovation
+    title: Scratch for Executives
     colour: "#EF233C"
-    description: T. E. Shaw of Digytle discovered Distributed Learership and Digital Innovation and met the author Caerina Maniscalco.
+    description: Even in the midst of the digital transformation, or better put, especially there, one needs guidance: a light house, or a solid rock. Scratch for Executive helps digital executives to make better sense of the world surrounding them.
 sections:
   - section:
     title:
