--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -3,7 +3,7 @@ header:
   title:
     title: Scratch for Executives
     colour: "#EF233C"
-    description: Even in the midst of the digital transformation, or better put, especially there, one needs guidance: a light house, or a solid rock. Scratch for Executive helps digital executives to make better sense of the world surrounding them.
+    description: "Even in the midst of the digital transformation, or better put, especially there, one needs guidance: a light house, or a solid rock. Scratch for Executive helps digital executives to make better sense of the world surrounding them."
 sections:
   - section:
     title:
